# BGW

./: .gitignore  Cargo.toml  README.md
src/: circuit.rs  lib.rs  main.rs  message.rs  party.rs  sharing.rs
