[package]
name = "bgw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-std = "0.4"
ark-poly = "0.4"
ark-bn254 = "0.4" # 254-bit prime field
tokio = { version = "1", features = ["full"] }
rand = "0.8"